# cursed-snake

./: .gitignore  README.md
controllers/esp32-cups/: platformio.ini
controllers/esp32-cups/src/: main.cpp
controllers/gyro/: README.md
controllers/gyro/android/: settings.gradle
controllers/gyro/android/app/: build.gradle
controllers/gyro/android/app/release/: app-release.aab
controllers/gyro/android/app/src/androidTest/java/uk/co/djpiper28/gyrosnake/: ExampleInstrumentedTest.java
controllers/gyro/android/app/src/main/: AndroidManifest.xml
controllers/gyro/android/app/src/main/java/uk/co/djpiper28/gyrosnake/: Api.java  FrameHandler.java  InputFrame.java  MainActivity.java  MovementTypes.java
controllers/gyro/android/app/src/main/res/layout/: activity_main.xml
controllers/gyro/android/app/src/main/res/values/: strings.xml  themes.xml
controllers/gyro/android/app/src/main/res/values-night/: themes.xml
controllers/gyro/android/gradle/wrapper/: gradle-wrapper.properties
controllers/typing_game/: CMakeLists.txt  config.c  config.h  consts.c  consts.h  main.c  netty.c  netty.h
game/: Makefile  README.md  pyproject.toml
game/bonjour_service/: go.mod  go.sum  main.go
game/src/cursed_snake/: __main__.py  main.py  settings.py
game/src/cursed_snake/controller/: game_controller.py
game/src/cursed_snake/gui/: game_screen.py
game/src/cursed_snake/model/: board.py  directions.py  snake.py  snake_types.py
game/src/cursed_snake/server/: http_server.py  server.py
game/src/cursed_snake/truley_cursed/: global_state.py
(+3 files in other folders)
