[build-system]
requires = [
    "setuptools >= 65.4.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "cursed-snake"
version = "0.0.1"
description = "A very cursed game of snake"
readme = "README.md"

dependencies = [
    "matplotlib==3.6.0",
    "Flask==2.2.2"
]

[project.optional-dependencies]
dev = []

[project.scripts]
main = "cursed_snake.main:main"

[tool.setuptools.packages.find]
where = ["src"]